// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default recommendation renders cognitive survey 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="mock"
  >
    Survey
  </div>
</div>
`;

exports[`Default recommendation renders external survey 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="mock"
  >
    Status
  </div>
</div>
`;

exports[`Default recommendation renders personality results 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="mock"
  >
    Results
  </div>
</div>
`;

exports[`Default recommendation renders personality survey 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="mock"
  >
    Survey
  </div>
</div>
`;

exports[`Default renders results 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="mock"
  >
    Results
  </div>
</div>
`;

exports[`Default renders skipped 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="mock"
  >
    Status
  </div>
</div>
`;

exports[`Default renders survey 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="mock"
  >
    Survey
  </div>
</div>
`;
